===========================================================================
 This file describes changes in the IO package beginning from version 1.2:
===========================================================================

==========================
 Changes from 1.2 -> 1.3:
==========================

  - hint to load a package if there no handler for magic during unpickling

