@@ -27,11 +27,11 @@ Subtitle := "Bindings for low level C library IO",
 ##  See '?Extending: Version Numbers' in GAP help for an explanation
 ##  of valid version numbers. For an automatic package distribution update
 ##  you must provide a new version number even after small changes.
-Version := "1.2",
+Version := "1.3",
 
 ##  Release date of the current version in dd/mm/yyyy format.
 # 
-Date := "18/08/2006",
+Date := "01/09/2006",
 
 ##  URL of the archive(s) of the current package release, but *without*
 ##  the format extension(s), like '.zoo', which are given next.
