@@ -6,6 +6,8 @@
  Changes from 1.2 -> 1.3:
 ==========================
 
-  - hint to load a package if there no handler for magic during unpickling
+  - hint to load a package if there is no handler for magic during unpickling
+  - follow Frank's suggestion to allow more than one package with a
+    C-part to be linked to a statically compiled GAP, document this
 
 
